fix font size environment box to rem, now it looks good on mobile

--- a/frontend/src/main-styles.css
+++ b/frontend/src/main-styles.css
@@ -176,7 +176,7 @@ main {
 /* CONTEXT NAVIGATION AND ITEM CHOOSER */
 
 #environment-text {
-  font-size: 60px;
+  font-size: 3.8rem;
   width: 350px;
   text-align: center;
 }
